<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/outline_search_white_24dp"
        android:title="@string/search"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_change_settings"
        android:title="@string/change_language_setting"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_favorite_menu"
        android:title="@string/favorites"
        app:showAsAction="withText" />

    <item
        android:id="@+id/notification_btn"
        android:title="@string/settings"
        android:icon="@drawable/outline_notifications_white_24dp"
        app:showAsAction="always" />
</menu>